Workaround jdk8 Extension dirs
java.ext.dirs where removed in https://openjdk.org/jeps/220 (jdk > 8) but our tests use jdk8 to compile code. To make SecurityManager happy we make reduce the folders where we read extensions to jdk location only.